--- a/style.css
+++ b/style.css
@@ -47,8 +47,13 @@
     opacity: .6;
     z-index: -1;
 }
+.child h2{
+    font-size: 1.8em;
+    letter-spacing: .1em;
+}
 .child p{
     margin: 10px 0;
+    font-size: 1.2em;
     
 }
 .child a{
@@ -59,6 +64,7 @@
     color: aliceblue;
     border-radius: 10px;
     transition: 1s;
+    font-size: 1.2em;
 }
 .child a:hover{
     background-color: rgb(31, 30, 30);
